@@ -2,6 +2,7 @@
 
 == 0.9.7 (unreleased)
 
+* Fixed a problem with folders called "sinatra" and PADRINO_IGNORE_CALLERS
 * Fixed TestTask
 * Fixed admin generator since not all ruby versions respond to "lines"
 * Fixed an issue in Sinatra::ShowExceptions since Bundler changes the Gem.dir
